[gd_scene load_steps=6 format=3 uid="uid://dxik2aq074jdx"]

[ext_resource type="Script" path="res://addons/dev_console/Autoloads/console_manager.gd" id="1_2p1ik"]
[ext_resource type="Script" path="res://addons/dev_console/UI Scripts/dev_console.gd" id="2_kduqy"]
[ext_resource type="PackedScene" uid="uid://dmqqsi3fjteq4" path="res://addons/dev_console/Commands/base_commands.tscn" id="3_7dgpa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhlwf"]
bg_color = Color(0.666667, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tm472"]
bg_color = Color(0.666667, 0, 0, 0.654902)

[node name="ConsoleManager" type="Node"]
script = ExtResource("1_2p1ik")

[node name="ConsoleCanvasLayer" type="CanvasLayer" parent="."]
layer = 25

[node name="Background" type="ColorRect" parent="ConsoleCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.247059, 0.247059, 0.392157)

[node name="DevConsole" type="Control" parent="ConsoleCanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_kduqy")

[node name="MarginContainer" type="MarginContainer" parent="ConsoleCanvasLayer/DevConsole"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="OuterPanel" type="PanelContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/Control/HBoxContainer/Panel"]
layout_mode = 2
offset_left = 10.0
offset_top = 4.0
offset_right = 1660.0
offset_bottom = 27.0
size_flags_horizontal = 3
text = "Developer Console"

[node name="CloseButton" type="Button" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_vhlwf")
theme_override_styles/normal = SubResource("StyleBoxFlat_tm472")
text = "X"

[node name="CommandHistory" type="ScrollContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="Panel" type="Panel" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/CommandHistory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/CommandHistory/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="OutputText" type="RichTextLabel" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/CommandHistory/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
scroll_following = true
selection_enabled = true

[node name="InputPanel" type="Panel" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/InputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEntry" type="LineEdit" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/InputPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "enter a command here"
clear_button_enabled = true

[node name="SubmitButton" type="Button" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/InputPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Submit"

[node name="PromptLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PromptLayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 39.0
offset_right = 115.0
offset_bottom = 64.0
grow_horizontal = 2
text = "Press Shift+` to open Console"

[node name="BaseCommands" parent="." instance=ExtResource("3_7dgpa")]
